--- a/page-3.html
+++ b/page-3.html
@@ -48,9 +48,8 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand m-0" href="#">
-                <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">
-                for Business
-            </a>
+                <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">            
+              </a>
             <p>Daycare Solutions For Businesses</p>
         </div>
     </nav>
@@ -143,7 +142,7 @@
                   </div>
                       <!--  -->
                       <div class="d-grid gap-2 d-md-block">
-                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Request A Call</button>
+                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Request A Call Back</button>
                       </div>
                   </div>
               </form>
@@ -190,39 +189,6 @@
           </div>
         </div>
       </div>
-     </div>
-  </div>
-</section>
-<!--  -->
-<!--  -->
-<section class="cta-block py-4">
-  <div class="container">
-    <div class="d-flex justify-content-center gap-2">
-     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
-    </div>
-  </div>
-</section>
-<!--  -->
-<section class="bg-light py-4 py-lg-5 text-center solution-section">
-  <div class="container">
-      <h2 class="title-text mb-3 mb-lg-4 text-center">Benefits Of On Site Daycare</h2>
-     <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/retention.svg" class="icon-img mt-3 m-auto" alt="Retention of employees" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Retention of employees.</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/employee-engagement.svg" class="icon-img mt-3 m-auto" alt="Improving employee engagement" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Improving employee engagement & productivity.</h3>
-          </div>
-        </div>
-      </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
           <img src="assets/recruiting-candidates.svg" class="icon-img mt-3 m-auto" alt="Recruiting Candidates" width="80px" height="80px">
@@ -242,6 +208,16 @@
      </div>
   </div>
 </section>
+<!--  -->
+<!--  -->
+<section class="cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
 <!--  -->
 <section class="bg-light cta-block py-4">
   <div class="container">
@@ -390,6 +366,62 @@
     <div class="d-flex justify-content-center gap-2">
      <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
     </div>
+  </div>
+</section>
+<!--  -->
+<section class="py-4 text-center">
+  <div class="container">
+      <h2 class="title-text mb-4 text-center">Why Parent's Love Footprints</h2>
+      <div class="row row-cols-2 row-cols-md-6 g-3 g-lg-4">
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v1"><img src="https://www.footprintseducation.in/ad/pages/assets/Real-Time-Mobile-Updates.jpg" class="img-fluid" alt="Real Time Mobile Updates"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">Real Time Mobile Updates</h3>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v2"><img src="https://www.footprintseducation.in/ad/pages/assets/100-Nutritious-Food.jpg" class="img-fluid" alt="100% Nutritious Food"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">100% Nutritious Food</h3>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v3"><img src="https://www.footprintseducation.in/ad/pages/assets/Live-CCTV-Footage.jpg" class="img-fluid" alt="Watch Live CCTV Footage"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">Watch Live CCTV Footage</h3>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v4"><img src="https://www.footprintseducation.in/ad/pages/assets/Tons-Of-Activities.jpg" class="img-fluid" alt="Tons Of Activities For All Ages"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">Tons Of Activities For All Ages</h3>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v5"><img src="https://www.footprintseducation.in/ad/pages/assets/Full-Attention.jpg" class="img-fluid" alt="Full Attention To Your Child"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">Full Attention To Your Child</h3>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card h-100">
+                  <div id="v6"><img src="https://www.footprintseducation.in/ad/pages/assets/High-Scope-Curriculum.jpeg" class="img-fluid" alt="High Scope Curriculum"></div>
+                  <div class="card-body">
+                      <h3 class="card-title fs-6 fw-semibold">High Scope Curriculum</h3>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
 </section>
 <!--  -->
