--- a/page-3.html
+++ b/page-3.html
@@ -132,12 +132,12 @@
                     <div class="col-md">
                       <div class="form-floating">
                         <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                          <option selected>Solution Interested</option>
+                          <option selected>Select Option</option>
                           <option value="1">Onsite</option>
                           <option value="2">Nearsite</option>
                           <option value="3">Don't Know</option>
                         </select>
-                        <label for="floatingSelect">Works with selects</label>
+                        <label for="floatingSelect">Solution Intereste</label>
                       </div>
                   </div>
                       <!--  -->
@@ -177,7 +177,7 @@
         <div class="card border-0 shadow h-100">
           <img src="assets/diverse-organization.svg" class="icon-img mt-3 m-auto" alt="Building a gender diverse organization" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Building a gender diverse organization.</h3>
+            <h3 class="card-title main-title">Building a gender diverse organization</h3>
           </div>
         </div>
       </div>
@@ -193,7 +193,7 @@
         <div class="card border-0 shadow h-100">
           <img src="assets/recruiting-candidates.svg" class="icon-img mt-3 m-auto" alt="Recruiting Candidates" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Helps in recruiting candidates.</h3>
+            <h3 class="card-title main-title">Helps in recruiting candidates</h3>
           </div>
         </div>
       </div>
@@ -201,20 +201,11 @@
         <div class="card border-0 shadow h-100">
           <img src="assets/talent.svg" class="icon-img mt-3 m-auto" alt="Building Employees" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Building employees loyalty and attracting better talent.</h3>
+            <h3 class="card-title main-title">Building employees loyalty and attracting better talent</h3>
           </div>
         </div>
       </div>
      </div>
-  </div>
-</section>
-<!--  -->
-<!--  -->
-<section class="cta-block py-4">
-  <div class="container">
-    <div class="d-flex justify-content-center gap-2">
-     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
-    </div>
   </div>
 </section>
 <!--  -->
@@ -453,7 +444,7 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
                     <div class="card-header py-3 text-bg-primary border-primary">
-                        <h4 class="my-0 fw-normal">Adult Child Interact</h4>
+                        <h4 class="my-0 fw-normal">Adult Child Interaction</h4>
                     </div>
                     <div class="card-body">
                         <ul class="list-unstyled m-0">
