--- a/page-3.html
+++ b/page-3.html
@@ -46,12 +46,12 @@
 
 <header> 
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-        <div class="container-fluid justify-content-center">
-            <a class="navbar-brand m-0" href="#">
-                <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">            
-              </a>
-            <p>Daycare Solutions For Businesses</p>
-        </div>
+      <div class="container-fluid d-flex flex-column justify-content-center">
+        <a class="navbar-brand m-0" href="#">
+            <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">            
+          </a>
+        <p class="mb-2">Daycare Solutions For Businesses</p>
+       </div>
     </nav>
 </header>  
 
