--- a/page-3.html
+++ b/page-3.html
@@ -77,7 +77,7 @@
               <h1 class="masthead-heading mb-lg-2 mb-3 text-white">Bring the best childcare to your workplace</h1>
           </div>
           <div class="hero-form">
-              <div class="form-title">GET IN TOUCH</div>
+              <div class="form-title mb-lg-4 mb-3">GET IN TOUCH</div>
               <form action="" class="needs-validation" novalidate>
                   <div class="row g-3">
                       <!--  -->
@@ -307,7 +307,7 @@
           <img src="assets/mobile-update.svg" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Instant Mobile Updates</h3>
-            <p class="main-para">Get updates on your mobile of what, when and how much your child ate, slept & played.</p>
+            <p class="main-para">Onsite Centers</p>
           </div>
         </div>
       </div>
@@ -316,34 +316,7 @@
           <img src="assets/cctv-live.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Live CCTV Streaming</h3>
-            <p class="main-para">Watching your child from anywhere anytime having fun in. </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/nutritious-food.svg" class="icon-img mt-3 m-auto" alt="Nutritious Food" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Nutritious Food, 0% Junk</h3>
-            <p class="main-para">100% Nutrition! 0% Junk, exactly the food they need! and only the food they need!</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/child-safety.svg" class="icon-img mt-3 m-auto" alt="Child Safety" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Infrastructure Designed <br> For Child Safety</h3>
-            <p class="main-para">Background checked all-female staff, Child safe flooring.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/playground.svg" class="icon-img mt-3 m-auto" alt="playgrounds" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Safety-focused Infrastructure</h3>
-            <p class="main-para">Our Classrooms and playgrounds are designed with safety in minds.</p>
+            <p class="main-para">Day Care Centers</p>
           </div>
         </div>
       </div>
