--- a/page-3.html
+++ b/page-3.html
@@ -50,7 +50,7 @@
         <a class="navbar-brand m-0" href="#">
             <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">            
           </a>
-        <p class="mb-2">Daycare Solutions For Businesses</p>
+        <p class="mb-2">Daycare Solution For Businesses</p>
        </div>
     </nav>
 </header>  
@@ -75,6 +75,13 @@
         <div class="hero-block">
           <div class="hero-title">
               <h1 class="masthead-heading mb-lg-2 mb-3 text-white">Bring the best childcare to your workplace</h1>
+              <div class="masthead-subheading review-info">
+                <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
+                <li class="list-inline-item">4.7</li>
+                  <li class="list-inline-item stars"> <span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-half">☆</span>
+                </li><li class="list-inline-item">878 Reviews</li>
+                </ul>
+              </div>
           </div>
           <div class="hero-form">
               <div class="form-title mb-lg-4 mb-3">GET IN TOUCH</div>
@@ -137,7 +144,7 @@
                           <option value="2">Nearsite</option>
                           <option value="3">Don't Know</option>
                         </select>
-                        <label for="floatingSelect">Solution Intereste</label>
+                        <label for="floatingSelect">Solution Interested</label>
                       </div>
                   </div>
                       <!--  -->
