--- a/page-3.html
+++ b/page-3.html
@@ -79,7 +79,7 @@
                 <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
                 <li class="list-inline-item">4.7</li>
                   <li class="list-inline-item stars"> <span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-half">☆</span>
-                </li><li class="list-inline-item">878 Reviews</li>
+                </li><li class="list-inline-item">8787 Reviews</li>
                 </ul>
               </div>
           </div>
@@ -162,7 +162,7 @@
 <!--  -->
 <section class="py-4 py-lg-5 text-center some-benefits">
   <div class="container">
-      <h2 class="title-text mb-lg-4 mb-4 text-center">Benefits of having a Footprints on-site daycare</h2>
+      <h2 class="title-text mb-lg-4 mb-4 text-center">Benefits of having a Footprints daycare</h2>
      <div class="row row-cols-2 row-cols-md-3 g-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
@@ -342,7 +342,7 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h2 class="title-text mb-4 text-center">Why Parent's Love Footprints</h2>
+      <h2 class="title-text mb-4 text-center">Why Parent's Love Footprints?</h2>
       <div class="row row-cols-2 row-cols-md-6 g-3 g-lg-4">
           <div class="col">
               <div class="card h-100">
