--- a/page-3.html
+++ b/page-3.html
@@ -311,7 +311,7 @@
      <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/mobile-update.svg" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
+          <img src="assets/icon-1.png" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Instant Mobile Updates</h3>
             <p class="main-para">Onsite Centers</p>
@@ -320,7 +320,7 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/cctv-live.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <img src="assets/icon-2.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Live CCTV Streaming</h3>
             <p class="main-para">Day Care Centers</p>
