--- a/page-3.html
+++ b/page-3.html
@@ -313,8 +313,7 @@
         <div class="card border-0 shadow h-100">
           <img src="assets/icon-1.png" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Instant Mobile Updates</h3>
-            <p class="main-para">Onsite Centers</p>
+            <h3 class="card-title main-title">Onsite Centers</h3>
           </div>
         </div>
       </div>
@@ -322,8 +321,7 @@
         <div class="card border-0 shadow h-100">
           <img src="assets/icon-2.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Live CCTV Streaming</h3>
-            <p class="main-para">Day Care Centers</p>
+            <h3 class="card-title main-title">Daycare Centers</h3>
           </div>
         </div>
       </div>
