--- a/page-3.html
+++ b/page-3.html
@@ -45,12 +45,11 @@
 
 
 <header> 
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+    <nav class="navbar navbar-expand-md navbar-white fixed-top bg-white">
       <div class="container-fluid d-flex flex-column justify-content-center">
         <a class="navbar-brand m-0" href="#">
-            <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">            
+            <img src="assets/footprint-new-logo.jpg" alt="footprint logo" width="250px" height="60px" class="img-fluid">            
           </a>
-        <p class="mb-2">Daycare Solution For Businesses</p>
        </div>
     </nav>
 </header>  
@@ -311,7 +310,7 @@
      <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/icon-1.png" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
+          <img src="assets/OnSiteDaycare.png" class="icon-img mt-3 m-auto" alt="OnSiteDaycare" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Onsite Centers</h3>
           </div>
@@ -319,9 +318,9 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/icon-2.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <img src="assets/NearSiteDaycare.png" class="icon-img mt-3 m-auto" alt="NearSiteDaycare" width="80px" height="80px">
           <div class="card-body px-3">
-            <h3 class="card-title main-title">Daycare Centers</h3>
+            <h3 class="card-title main-title">Near Site Centers</h3>
           </div>
         </div>
       </div>
@@ -675,8 +674,7 @@
 
 <section id="sticky-cta" class="footer sticky-bottom mt-auto fixed-bottom">
         <div class="d-flex">
-            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Enquire Now</a>
-            <a href="#" class="btn btn-secondary py-3 flex-fill text-white fw-semibold rounded-0">Call Us</a>
+            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Request A Call Back</a>
         </div>
 </section>
 <!--  -->
