--- a/page-3.html
+++ b/page-3.html
@@ -83,68 +83,58 @@
               </div>
           </div>
           <div class="hero-form">
-              <div class="form-title mb-lg-4 mb-3">GET IN TOUCH</div>
+              <div class="form-title">GET IN TOUCH</div>
+              <p class="text-white mb-lg-4 mb-3">Overall 154+ Centres, 42124+ Delighted Parents, Run by IIT-IIM Alumni</p>
               <form action="" class="needs-validation" novalidate>
                   <div class="row g-3">
                       <!--  -->
                       <div class="col-md">
-                          <div class="form-floating">
-                              <input type="text" class="form-control" id="hero-full-name" placeholder="Full Name" required>
-                              <label for="hero-full-name">Full Name</label>
-                              <!--  -->
-                              <div class="invalid-tooltip">
-                                  Please Enter Full Name
-                              </div>
-                              <!--  -->
-                          </div>
+                            <input type="text" class="form-control" id="hero-full-name" placeholder="Full Name" required>
+                            <label for="hero-full-name" class="visually-hidden">Full Name</label>
+                            <!--  -->
+                            <div class="invalid-tooltip">
+                                Please Enter Full Name
+                            </div>
+                            <!--  -->
                       </div>
                       <!--  -->
                       <div class="col-md">
-                          <div class="form-floating">
                               <input type="email" class="form-control" id="hero-email" placeholder="name@domain.com" required>
-                              <label for="hero-email">Official Email address</label>
+                              <label for="hero-email" class="visually-hidden">Official Email address</label>
                               <!--  -->
                               <div class="invalid-tooltip">
                                   Please Enter Correct Email ID
                               </div>
                               <!--  -->
-                          </div>
                       </div>
                       <!--  -->
                       <div class="col-md">
-                          <div class="form-floating">
                               <input type="text" class="form-control" id="hero-phone" placeholder="Phone Number" required>
-                              <label for="hero-phone">Phone Number</label>
+                              <label for="hero-phone" class="visually-hidden">Phone Number</label>
                               <!--  -->
                               <div class="invalid-tooltip">
                                   Please Enter Correct Phone Number
                               </div>
                               <!--  -->
-                          </div>
                       </div>
                       <!--  -->
                       <div class="col-md">
-                        <div class="form-floating">
                             <input type="text" class="form-control" id="hero-phone" placeholder="Company Name" required>
-                            <label for="hero-phone">Company Name</label>
+                            <label for="hero-phone" class="visually-hidden">Company Name</label>
                             <!--  -->
                             <div class="invalid-tooltip">
                                 Please Enter Correct Company Name
                             </div>
                             <!--  -->
-                        </div>
                     </div>
                     <!--  -->
                     <div class="col-md">
-                      <div class="form-floating">
                         <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                          <option selected>Select Option</option>
+                          <option selected>Solution Interested</option>
                           <option value="1">Onsite</option>
                           <option value="2">Nearsite</option>
                           <option value="3">Don't Know</option>
                         </select>
-                        <label for="floatingSelect">Solution Interested</label>
-                      </div>
                   </div>
                       <!--  -->
                       <div class="d-grid gap-2 d-md-block">
@@ -313,6 +303,7 @@
           <img src="assets/OnSiteDaycare.png" class="icon-img mt-3 m-auto" alt="OnSiteDaycare" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Onsite Centers</h3>
+            <p>Peace of Mind is Conveniently Located: Wherever You Are!</p>
           </div>
         </div>
       </div>
@@ -321,6 +312,7 @@
           <img src="assets/NearSiteDaycare.png" class="icon-img mt-3 m-auto" alt="NearSiteDaycare" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Near Site Centers</h3>
+            <p>Your Trusted Partner of Childcare Excellence is Nearby!</p>
           </div>
         </div>
       </div>
@@ -339,7 +331,7 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h2 class="title-text mb-4 text-center">Why Parent's Love Footprints?</h2>
+      <h2 class="title-text mb-4 text-center">Why Parents Love Footprints?</h2>
       <div class="row row-cols-2 row-cols-md-6 g-3 g-lg-4">
           <div class="col">
               <div class="card h-100">
@@ -396,7 +388,8 @@
 <section class="py-4 py-lg-5 highscope">
     <div class="container">
         <div class="highscope-logo-title text-center mb-3 mb-lg-5">
-            <img src="assets/highscope.png" alt="highscope" width="420" height="100" class="img-fluid mb-4 mb-lg-4">
+            <h3 class="display-6 fw-semibold">Our Curriculum</h3>
+            <img src="assets/highscope.png" alt="highscope" width="200" height="100" class="img-fluid mb-4 mb-lg-4">
             <p>Based on 50 Years of research by US based HighScope Foundation engaged in curriculum development since 1962</p>
             <p>A child centric curriculum with activities right from birth to 5 years maximizing the opportunity for child growth & development</p>
             <h3 class="h5">Being used in over 50,000 preschools in more than 20 Countries across the world like US, UK, EU, AU & China.</h3>
