--- a/page-3.html
+++ b/page-3.html
@@ -91,41 +91,21 @@
                       <div class="col-md">
                             <input type="text" class="form-control" id="hero-full-name" placeholder="Full Name" required>
                             <label for="hero-full-name" class="visually-hidden">Full Name</label>
-                            <!--  -->
-                            <div class="invalid-tooltip">
-                                Please Enter Full Name
-                            </div>
-                            <!--  -->
                       </div>
                       <!--  -->
                       <div class="col-md">
                               <input type="email" class="form-control" id="hero-email" placeholder="name@domain.com" required>
                               <label for="hero-email" class="visually-hidden">Official Email address</label>
-                              <!--  -->
-                              <div class="invalid-tooltip">
-                                  Please Enter Correct Email ID
-                              </div>
-                              <!--  -->
                       </div>
                       <!--  -->
                       <div class="col-md">
                               <input type="text" class="form-control" id="hero-phone" placeholder="Phone Number" required>
                               <label for="hero-phone" class="visually-hidden">Phone Number</label>
-                              <!--  -->
-                              <div class="invalid-tooltip">
-                                  Please Enter Correct Phone Number
-                              </div>
-                              <!--  -->
                       </div>
                       <!--  -->
                       <div class="col-md">
                             <input type="text" class="form-control" id="hero-phone" placeholder="Company Name" required>
                             <label for="hero-phone" class="visually-hidden">Company Name</label>
-                            <!--  -->
-                            <div class="invalid-tooltip">
-                                Please Enter Correct Company Name
-                            </div>
-                            <!--  -->
                     </div>
                     <!--  -->
                     <div class="col-md">
@@ -138,7 +118,7 @@
                   </div>
                       <!--  -->
                       <div class="d-grid gap-2 d-md-block">
-                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Request A Call Back</button>
+                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" type="submit">Request A Call Back</button>
                       </div>
                   </div>
               </form>
@@ -388,8 +368,8 @@
 <section class="py-4 py-lg-5 highscope">
     <div class="container">
         <div class="highscope-logo-title text-center mb-3 mb-lg-5">
-            <h3 class="display-6 fw-semibold">Our Curriculum</h3>
-            <img src="assets/highscope.png" alt="highscope" width="200" height="100" class="img-fluid mb-4 mb-lg-4">
+            <h3 class="curriculum-title">Our Curriculum</h3>
+            <img src="assets/highscope.png" alt="highscope" width="150" height="100" class="img-fluid mb-4 mb-lg-4">
             <p>Based on 50 Years of research by US based HighScope Foundation engaged in curriculum development since 1962</p>
             <p>A child centric curriculum with activities right from birth to 5 years maximizing the opportunity for child growth & development</p>
             <h3 class="h5">Being used in over 50,000 preschools in more than 20 Countries across the world like US, UK, EU, AU & China.</h3>
@@ -670,57 +650,6 @@
             <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Request A Call Back</a>
         </div>
 </section>
-<!--  -->
-
-<!-- Modal -->
-<div class="modal fade" id="heroModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="heroModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header border-0">
-          <!-- <h1 class="modal-title fs-5" id="heroModalLabel">Modal title</h1> -->
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <!--  -->
-          <div class="row g-2">
-            <!--  -->
-            <div class="col-12">
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="company-name" placeholder="Company Name">
-                    <label for="company-name">Company Name</label>
-                    <!--  -->
-                    <div class="invalid-tooltip">
-                        Please Enter Company Name
-                    </div>
-                    <!--  -->
-                </div>
-            </div>
-            <!--  -->
-            <div class="col-12">
-                <div class="h6 my-3">Solution Interested In</div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                    <label class="form-check-label" for="inlineRadio1">Onsite</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">Near Site</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">Don't Know</label>
-                  </div>
-            </div>
-            <!--  -->
-            <div class="d-grid mt-lg-4">
-                <button class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Submit</button>
-            </div>
-        </div>
-          <!--  -->
-        </div>
-      </div>
-    </div>
-</div>
 <!--  -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
